# Sc2BuildAnalyzer

./: CMakeLists.txt  README.md
SbaCore/: CMakeLists.txt
SbaCore/Dependencies/s2protocol/: README.txt
SbaCore/Source/: Build.cpp  Build.h  BuildComparator.cpp  BuildComparator.h  Filter.cpp  Filter.h  Project.cpp  Project.h  ReplayParser.cpp  ReplayParser.h
SbaCore/Source/ReplayData/: ReplayData.h  Sc2CreationEvent.h  Sc2EventIds.cpp  Sc2EventIds.h  Sc2Player.h  Sc2Replay.h  Sc2Unit.cpp  Sc2Unit.h  Sc2UnitEvent.cpp  Sc2UnitEvent.h
SbaCore/Source/Utility/: ArrayProperty.h  DataObject.cpp  DataObject.h  Log.cpp  Log.h  ProgressListener.h  Property.h  UtilityTester.cpp  UtilityTester.h  WorkQueueThread.cpp  WorkQueueThread.h
SbaPythonReader/: CMakeLists.txt
SbaPythonReader/Dependencies/: README.txt  UpdateS2Protocol.bat
SbaPythonReader/Dependencies/s2protocol/: LastCommit.txt  README.txt  s2_cli.py
SbaPythonReader/Dependencies/s2protocol/versions/: protocol21029.py
SbaPythonReader/Source/: Main.cpp  ReplayReader.cpp  ReplayReader.h
SbaUi/: CMakeLists.txt  Main.cpp  ProjectWindow.cpp  ProjectWindow.h  ProjectWindow.ui  Resources.cpp  Resources.h  Sc2BuildAnalyzerUi.pro  StartScreen.cpp  StartScreen.h  StartScreen.ui  WindowManager.cpp  WindowManager.h  startscreen.cpp  startscreen.h
SbaUi/Resources/Replays/: TestReplay1.SC2Replay  TvZ211Test1.SC2Replay  TvZ211Test2.SC2Replay  TvZ211Test3.SC2Replay  TvZ211Test4.SC2Replay
